--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,139 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+# Native Quarkus CircleCI configuration file
+
+#
+
+version: 2
+
+jobs:
+
+  build:
+
+    # Use "machine" instead of e.g. "docker" for better/faster results
+
+    #machine: true
+
+    # Uses a "medium" sized machine - maybe increase this to "large" if you pay for CircleCI
+
+    resource_class: medium
+
+    working_directory: ~/repo
+
+    environment:
+
+      MAVEN_OPTS: -Xmx6400m
+
+
+
+    docker:
+
+      - image: circleci/openjdk:11.0.6-jdk-stretch
+
+      # Set the GRAALVM_HOME env variable to the location where we will be installing GraalVM
+
+      #GRAALVM_HOME: /home/circleci/repo/.graalvm
+
+    steps:
+
+      # Checkout the source code
+
+      # ########################
+
+      - checkout
+
+
+
+      # Restore any files we may have cached
+
+      # ########################
+
+      - restore_cache:
+
+          keys:
+
+            - v1-quarkus-wfb-{{ checksum "pom.xml" }}
+
+            # fallback to using the latest cache if no exact match is found
+
+            - v1-quarkus-wfb-
+
+
+
+      # Download maven dependencies so that we can cache them
+
+      # ########################
+
+      - run:
+
+          name: Download Dependencies
+
+          command: mvn dependency:go-offline
+
+      # Cache the maven dependencies
+
+      - save_cache:
+
+          paths:
+
+            - ~/.m2
+
+          key: v1-quarkus-wfb-{{ checksum "pom.xml" }}
+
+
+
+      # Standard maven build and test phases - does not perform a native build (or verify)
+
+      # ########################
+
+      - run:
+
+          name: Build (Standard)
+
+          command: mvn clean package -DskipTests -Dmaven.test.skip=true
+
+      #- run:
+
+      #    name: Verify (Standard)
+
+      #    command: mvn test
+
+
+
+      # Install GraalVM and native-image, needed for a native Quarkus build
+
+      # GraalVM 19.3.1 suports Java 11
+
+      # ########################
+
+      #- run:
+
+      #    name: Install GraalVM
+
+      #    command: curl https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-19.3.1/graalvm-ce-java11-linux-amd64-19.3.1.tar.gz -O -J -L && tar xfz graalvm-ce-linux-amd64-19.3.1.tar.gz && mv graalvm-ce-19.3.1 .graalvm && rm graalvm-ce-linux-amd64-19.3.1.tar.gz
+
+      #- run:
+
+      #    name: Install native-image
+
+      #    command: $GRAALVM_HOME/bin/gu install native-image
+
+
+
+          # Perform a native Quarkus build and verify
+
+      # ########################
+
+      #- run:
+
+      #    name: Build (Native)
+
+      #    command: ./mvnw clean package -Pnative -DskipTests -Dmaven.test.skip=true
+
+      #    no_output_timeout: 30m
+
+      #- run:
+
+      #    name: Verify (Native)
+
+      #    command: ./mvnw verify -Pnative
+
+      #    no_output_timeout: 30m
